# ReportsGenerator

./: .gitignore  .pre-commit-config.yaml  MIGRATION_GUIDE.md  QWEN.md  README.md  TODO.md  ai.py  mypy.ini  pyproject.toml  run_backend.sh  run_frontend.sh  service.py
dataset/user_prompts/: praktika11.md
html/: index.html
logs/: events.jsonl
prompts/: coder.md  diagram_creator.md  document_analyst.j2  formatter.j2  formatter.md  image_describer.j2  planner.md  supervisor.md  template_analyst.j2  user_prompt_analyst.j2  user_prompt_analyst.md
prompts/_common/: data_blocks_schemas.j2  format_answer_blocks.j2  list_blocks_schema.json  requirements.j2  task_other_llm.j2
prompts/reports-agent/: v1-rml.md  v2-markdown.md
prompts/users/: garnaga-report.md
src/: config.py  models.py  orchestrator.py  report_generator.py  reports_generator.py  service.py  setup_structlog.py  storage.py  streamlit_app.py  task_worker_pool.py  tasks.py
src/dataset/user_prompts/: garnaga-report.md
src/logs/: events.jsonl
src/orchestrator/: __init__.py  analyzer.py  base.py  dto.py  formatter.py  models.py  tools.py
src/prompts/: document_analyst.md  formatter.md  template_analyst.md
src/prompts/_common/: data_blocks_schemas.md
src/report_generator/: docx_styles.py  generator.py  md2docx.py
src/report_generator/orchestrator/: __init__.py  analyzer.py  base.py  formatter.py  prompt_manager.py  rate_limiter.py
src/report_generator/orchestrator/models/: __init__.py  agent_config.py  ai_model.py  documents.py  state.py
src/static/js/: app.js
src/task_manage/: __init__.py  storage.py  task.py  worker_pool.py
src/templates/: index.html
src/utils/: data_block_registry.py  log.py  md2docx.py  prompt_manager.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/unit/: test_orchestrator_core.py  test_render_prompts.py
utils/: create_context.py  docx_styles.py  md2docx.py  rag.py  rml2docx.py
