[project]
name = "reports-gen"
version = "0.1.0"
description = "ИИ агент для автоматического создания отчетов"
authors = [
    {name = "paranoik1",email = "paranoik@noreplay.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "markdown (>=3.10.2,<4.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "pypdf (>=6.7.4,<7.0.0)",
    "patchright (>=1.58.0,<2.0.0)",
    "pandoc (>=2.4,<3.0)",
    "pypandoc (>=1.16.2,<2.0.0)",
    "openai (>=2.24.0,<3.0.0)",
    "rapidfuzz (>=3.0.0,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]

[tool.isort]
profile = "black"
